# asset_financing_risk_prediction

./: README.md
asset_financing/: Makefile  README.md  pyproject.toml  requirements.txt
asset_financing/notebooks/: assessment.ipynb  data-cleaning.ipynb  eda.ipynb  modelling.ipynb  submission.csv
asset_financing/src/: data_preprocessing.py  train.py
