[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "asset_financing"
version = "0.0.1"
description = "predicting the risk of financing asset."
authors = [
  { name = "Samson Olaoye" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["asset_financing"]
include = ["pyproject.toml", "asset_financing/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["asset_financing"]
force-sort-within-sections = true

